{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 679,
  "lineage": "c0542965-6893-3520-aa63-4beefe8d2c51",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "Jenkins_Con",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08f242140395f263b",
            "domain": "vpc",
            "id": "eipalloc-08f242140395f263b",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-54-177-57-214.us-west-1.compute.amazonaws.com",
            "public_ip": "54.177.57.214",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Jenkins_Con"
            },
            "tags_all": {
              "Name": "Jenkins_Con"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.Jenkins_Con",
            "aws_vpc.Jenkins_Con"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "SERVER1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-018d291ca9ffc002f",
            "arn": "arn:aws:ec2:us-west-1:643875669357:instance/i-0ce3994a9674859bd",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ce3994a9674859bd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "testworld",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08cc8c0e77684b3e7",
            "private_dns": "ip-10-0-1-30.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.30",
            "public_ip": "54.241.215.156",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-058e0d1890bc97a4c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dd353fea5f91541e",
            "tags": {
              "Name": "SERVER1"
            },
            "tags_all": {
              "Name": "SERVER1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-025fa997edb381ab3"
            ]
          },
          "dependencies": [
            "aws_key_pair.testworld",
            "aws_security_group.Jenkins_Con",
            "aws_subnet.subnetpub1",
            "aws_vpc.Jenkins_Con"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "SERVER2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-018d291ca9ffc002f",
            "arn": "arn:aws:ec2:us-west-1:643875669357:instance/i-0cfc2e2f9ab7e9174",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cfc2e2f9ab7e9174",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "testworld",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-045d799924f1d1989",
            "private_dns": "ip-10-0-1-18.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.18",
            "public_ip": "54.183.251.133",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09fb60e1a859d3fbc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dd353fea5f91541e",
            "tags": {
              "Name": "SERVER2"
            },
            "tags_all": {
              "Name": "SERVER2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-025fa997edb381ab3"
            ]
          },
          "dependencies": [
            "aws_key_pair.testworld",
            "aws_security_group.Jenkins_Con",
            "aws_subnet.subnetpub1",
            "aws_vpc.Jenkins_Con"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "SERVER3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-018d291ca9ffc002f",
            "arn": "arn:aws:ec2:us-west-1:643875669357:instance/i-009c5530ce317b655",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-009c5530ce317b655",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "testworld",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07890de4003a188a9",
            "private_dns": "ip-10-0-1-15.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.15",
            "public_ip": "3.101.15.168",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01eb922ed4d1d241e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dd353fea5f91541e",
            "tags": {
              "Name": "SERVER3"
            },
            "tags_all": {
              "Name": "SERVER3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-025fa997edb381ab3"
            ]
          },
          "dependencies": [
            "aws_key_pair.testworld",
            "aws_security_group.Jenkins_Con",
            "aws_subnet.subnetpub1",
            "aws_vpc.Jenkins_Con"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "SERVER4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02ea247e531eb3ce6",
            "arn": "arn:aws:ec2:us-west-1:643875669357:instance/i-0995bea44be7aedf2",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0995bea44be7aedf2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "testworld",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-050e0a069452e438a",
            "private_dns": "ip-10-0-1-54.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.54",
            "public_ip": "3.101.24.12",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-062ab7b4bde80a67b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dd353fea5f91541e",
            "tags": {
              "Name": "SERVER4"
            },
            "tags_all": {
              "Name": "SERVER4"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-025fa997edb381ab3"
            ]
          },
          "dependencies": [
            "aws_key_pair.testworld",
            "aws_security_group.Jenkins_Con",
            "aws_subnet.subnetpub1",
            "aws_vpc.Jenkins_Con"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Jenkins_Con",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:643875669357:internet-gateway/igw-0445cd9e2e990e812",
            "id": "igw-0445cd9e2e990e812",
            "owner_id": "643875669357",
            "tags": {
              "Name": "Jenkins_Con"
            },
            "tags_all": {
              "Name": "Jenkins_Con"
            },
            "vpc_id": "vpc-05674cbf883c08863"
          },
          "dependencies": [
            "aws_vpc.Jenkins_Con"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "Jenkins_Con",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08f242140395f263b",
            "connectivity_type": "public",
            "id": "nat-041d70d86bb214269",
            "network_interface_id": "eni-04c92fc6b8235d3ba",
            "private_ip": "10.0.1.48",
            "public_ip": "54.177.57.214",
            "subnet_id": "subnet-0dd353fea5f91541e",
            "tags": {
              "Name": "Jenkins_Con"
            },
            "tags_all": {
              "Name": "Jenkins_Con"
            }
          },
          "dependencies": [
            "aws_eip.Jenkins_Con",
            "aws_internet_gateway.Jenkins_Con",
            "aws_subnet.subnetpub1",
            "aws_vpc.Jenkins_Con"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Jenkins_Con_Pri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:643875669357:route-table/rtb-0b08b762235bde09f",
            "id": "rtb-0b08b762235bde09f",
            "owner_id": "643875669357",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-041d70d86bb214269",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Jenkins_Con"
            },
            "tags_all": {
              "Name": "Jenkins_Con"
            },
            "timeouts": null,
            "vpc_id": "vpc-05674cbf883c08863"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.Jenkins_Con",
            "aws_internet_gateway.Jenkins_Con",
            "aws_nat_gateway.Jenkins_Con",
            "aws_subnet.subnetpub1",
            "aws_vpc.Jenkins_Con"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Jenkins_Con_Pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:643875669357:route-table/rtb-0a306a33c68924003",
            "id": "rtb-0a306a33c68924003",
            "owner_id": "643875669357",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0445cd9e2e990e812",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Jenkins_Con"
            },
            "tags_all": {
              "Name": "Jenkins_Con"
            },
            "timeouts": null,
            "vpc_id": "vpc-05674cbf883c08863"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Jenkins_Con",
            "aws_vpc.Jenkins_Con"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Jenkins_Con_Pri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08445dea93626e27c",
            "route_table_id": "rtb-0a306a33c68924003",
            "subnet_id": "subnet-00f576f258b400231"
          },
          "dependencies": [
            "aws_internet_gateway.Jenkins_Con",
            "aws_route_table.Jenkins_Con_Pub",
            "aws_subnet.subnetPri1",
            "aws_vpc.Jenkins_Con"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Jenkins_Con_Pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b6fa491388fb326f",
            "route_table_id": "rtb-0a306a33c68924003",
            "subnet_id": "subnet-0dd353fea5f91541e"
          },
          "dependencies": [
            "aws_internet_gateway.Jenkins_Con",
            "aws_route_table.Jenkins_Con_Pub",
            "aws_subnet.subnetpub1",
            "aws_vpc.Jenkins_Con"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Jenkins_Con",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:643875669357:security-group/sg-025fa997edb381ab3",
            "description": "allow ssh and http",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-025fa997edb381ab3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Jenkins",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MySQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Proxy from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow http from vpc",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow ssh from vpc",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Jenkins_Con",
            "name_prefix": "",
            "owner_id": "643875669357",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "auto"
            },
            "tags_all": {
              "Name": "auto"
            },
            "timeouts": null,
            "vpc_id": "vpc-05674cbf883c08863"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Jenkins_Con"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnetPri1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:643875669357:subnet/subnet-00f576f258b400231",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.3.0/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00f576f258b400231",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "643875669357",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnetpri1"
            },
            "tags_all": {
              "Name": "subnetpri1"
            },
            "vpc_id": "vpc-05674cbf883c08863"
          },
          "dependencies": [
            "aws_vpc.Jenkins_Con"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnetPri2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:643875669357:subnet/subnet-05af5da871c05e6fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.4.0/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05af5da871c05e6fb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "643875669357",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnetpri2"
            },
            "tags_all": {
              "Name": "subnetpri2"
            },
            "vpc_id": "vpc-05674cbf883c08863"
          },
          "dependencies": [
            "aws_vpc.Jenkins_Con"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnetpub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:643875669357:subnet/subnet-0dd353fea5f91541e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.1.0/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd353fea5f91541e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "643875669357",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnetpub1"
            },
            "tags_all": {
              "Name": "subnetpub1"
            },
            "vpc_id": "vpc-05674cbf883c08863"
          },
          "dependencies": [
            "aws_vpc.Jenkins_Con"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnetpub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:643875669357:subnet/subnet-099d3d5cf43f2f88d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.2.0/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-099d3d5cf43f2f88d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "643875669357",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnetpub2"
            },
            "tags_all": {
              "Name": "subnetpub2"
            },
            "vpc_id": "vpc-05674cbf883c08863"
          },
          "dependencies": [
            "aws_vpc.Jenkins_Con"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Jenkins_Con",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:643875669357:vpc/vpc-05674cbf883c08863",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0978d577fa6a23cee",
            "default_route_table_id": "rtb-02d06564874eb589a",
            "default_security_group_id": "sg-03b97010547610581",
            "dhcp_options_id": "dopt-01fc6737d9f013b73",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-05674cbf883c08863",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02d06564874eb589a",
            "owner_id": "643875669357",
            "tags": {
              "Name": "Jenkins_Con"
            },
            "tags_all": {
              "Name": "Jenkins_Con"
            }
          }
        }
      ]
    }
  ]
}